--- a/Resources/TextureAtlases/HUD.plist
+++ b/Resources/TextureAtlases/HUD.plist
@@ -4,57 +4,44 @@
     <dict>
         <key>frames</key>
         <dict>
-            <key>Toucan_1.png</key>
+            <key>Game_Over.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,2},{117,72}}</string>
+                <string>{{2,2},{982,106}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{0,0},{117,72}}</string>
+                <string>{{0,0},{982,106}}</string>
                 <key>sourceSize</key>
-                <string>{117,72}</string>
+                <string>{982,106}</string>
             </dict>
-            <key>Toucan_2.png</key>
+            <key>Get_Ready.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{121,2},{117,72}}</string>
+                <string>{{2,110},{1064,106}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{0,0},{117,72}}</string>
+                <string>{{0,0},{1064,106}}</string>
                 <key>sourceSize</key>
-                <string>{117,72}</string>
+                <string>{1064,106}</string>
             </dict>
-            <key>Toucan_3.png</key>
+            <key>Title.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,76},{113,72}}</string>
+                <string>{{986,2},{982,106}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{0,0},{113,72}}</string>
+                <string>{{0,0},{982,106}}</string>
                 <key>sourceSize</key>
-                <string>{113,72}</string>
-            </dict>
-            <key>Toucan_Dead.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{117,76},{114,77}}</string>
-                <key>offset</key>
-                <string>{0,0}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{0,0},{114,77}}</string>
-                <key>sourceSize</key>
-                <string>{114,77}</string>
+                <string>{982,106}</string>
             </dict>
         </dict>
         <key>metadata</key>
@@ -62,13 +49,13 @@
             <key>format</key>
             <integer>2</integer>
             <key>realTextureFileName</key>
-            <string>Textures@2x.png</string>
+            <string>HUD.png</string>
             <key>size</key>
-            <string>{256,256}</string>
+            <string>{2048,256}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:f546fdd4be56f1d423c8b0cc4d471362:51767a5b5de282633bebac6e206e0c82:432b15258729bca49c4cf5458d86f740$</string>
+            <string>$TexturePacker:SmartUpdate:509fc9c776d34f30c8cb33bb8a6cc288:c391ca78d920d213de8e0712cb1743a4:cb4e6430ea807ce724ba815ec96ef541$</string>
             <key>textureFileName</key>
-            <string>Textures@2x.png</string>
+            <string>HUD.png</string>
         </dict>
     </dict>
 </plist>
