--- a/Resources/TextureAtlases/HUD@2x.plist
+++ b/Resources/TextureAtlases/HUD@2x.plist
@@ -1,295 +1,165 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict>
-	<key>frames</key>
-	<dict>
-		<key>0.png</key>
-		<dict>
-			<key>frame</key>
-			<string>{{2,2},{54,53}}</string>
-			<key>offset</key>
-			<string>{0,0}</string>
-			<key>rotated</key>
-			<false/>
-			<key>sourceColorRect</key>
-			<string>{{0,0},{54,53}}</string>
-			<key>sourceSize</key>
-			<string>{54,53}</string>
-		</dict>
-		<key>1.png</key>
-		<dict>
-			<key>frame</key>
-			<string>{{58,2},{33,53}}</string>
-			<key>offset</key>
-			<string>{0,0}</string>
-			<key>rotated</key>
-			<false/>
-			<key>sourceColorRect</key>
-			<string>{{0,0},{33,53}}</string>
-			<key>sourceSize</key>
-			<string>{33,53}</string>
-		</dict>
-		<key>2.png</key>
-		<dict>
-			<key>frame</key>
-			<string>{{93,2},{54,53}}</string>
-			<key>offset</key>
-			<string>{0,0}</string>
-			<key>rotated</key>
-			<false/>
-			<key>sourceColorRect</key>
-			<string>{{0,0},{54,53}}</string>
-			<key>sourceSize</key>
-			<string>{54,53}</string>
-		</dict>
-		<key>3.png</key>
-		<dict>
-			<key>frame</key>
-			<string>{{149,2},{54,53}}</string>
-			<key>offset</key>
-			<string>{0,0}</string>
-			<key>rotated</key>
-			<false/>
-			<key>sourceColorRect</key>
-			<string>{{0,0},{54,53}}</string>
-			<key>sourceSize</key>
-			<string>{54,53}</string>
-		</dict>
-		<key>4.png</key>
-		<dict>
-			<key>frame</key>
-			<string>{{205,2},{54,53}}</string>
-			<key>offset</key>
-			<string>{0,0}</string>
-			<key>rotated</key>
-			<false/>
-			<key>sourceColorRect</key>
-			<string>{{0,0},{54,53}}</string>
-			<key>sourceSize</key>
-			<string>{54,53}</string>
-		</dict>
-		<key>5.png</key>
-		<dict>
-			<key>frame</key>
-			<string>{{261,2},{54,53}}</string>
-			<key>offset</key>
-			<string>{0,0}</string>
-			<key>rotated</key>
-			<false/>
-			<key>sourceColorRect</key>
-			<string>{{0,0},{54,53}}</string>
-			<key>sourceSize</key>
-			<string>{54,53}</string>
-		</dict>
-		<key>6.png</key>
-		<dict>
-			<key>frame</key>
-			<string>{{317,2},{54,53}}</string>
-			<key>offset</key>
-			<string>{0,0}</string>
-			<key>rotated</key>
-			<false/>
-			<key>sourceColorRect</key>
-			<string>{{0,0},{54,53}}</string>
-			<key>sourceSize</key>
-			<string>{54,53}</string>
-		</dict>
-		<key>7.png</key>
-		<dict>
-			<key>frame</key>
-			<string>{{373,2},{54,53}}</string>
-			<key>offset</key>
-			<string>{0,0}</string>
-			<key>rotated</key>
-			<false/>
-			<key>sourceColorRect</key>
-			<string>{{0,0},{54,53}}</string>
-			<key>sourceSize</key>
-			<string>{54,53}</string>
-		</dict>
-		<key>8.png</key>
-		<dict>
-			<key>frame</key>
-			<string>{{429,2},{54,53}}</string>
-			<key>offset</key>
-			<string>{0,0}</string>
-			<key>rotated</key>
-			<false/>
-			<key>sourceColorRect</key>
-			<string>{{0,0},{54,53}}</string>
-			<key>sourceSize</key>
-			<string>{54,53}</string>
-		</dict>
-		<key>9.png</key>
-		<dict>
-			<key>frame</key>
-			<string>{{485,2},{54,53}}</string>
-			<key>offset</key>
-			<string>{0,0}</string>
-			<key>rotated</key>
-			<false/>
-			<key>sourceColorRect</key>
-			<string>{{0,0},{54,53}}</string>
-			<key>sourceSize</key>
-			<string>{54,53}</string>
-		</dict>
-		<key>Button_Leader_Board.png</key>
-		<dict>
-			<key>frame</key>
-			<string>{{541,2},{200,114}}</string>
-			<key>offset</key>
-			<string>{0,0}</string>
-			<key>rotated</key>
-			<false/>
-			<key>sourceColorRect</key>
-			<string>{{0,0},{200,114}}</string>
-			<key>sourceSize</key>
-			<string>{200,114}</string>
-		</dict>
-		<key>Button_Play.png</key>
-		<dict>
-			<key>frame</key>
-			<string>{{743,2},{200,114}}</string>
-			<key>offset</key>
-			<string>{0,0}</string>
-			<key>rotated</key>
-			<false/>
-			<key>sourceColorRect</key>
-			<string>{{0,0},{200,114}}</string>
-			<key>sourceSize</key>
-			<string>{200,114}</string>
-		</dict>
-		<key>Button_Rate.png</key>
-		<dict>
-			<key>frame</key>
-			<string>{{2,118},{139,82}}</string>
-			<key>offset</key>
-			<string>{0,0}</string>
-			<key>rotated</key>
-			<false/>
-			<key>sourceColorRect</key>
-			<string>{{0,0},{139,82}}</string>
-			<key>sourceSize</key>
-			<string>{139,82}</string>
-		</dict>
-		<key>Button_Tap_Left.png</key>
-		<dict>
-			<key>frame</key>
-			<string>{{143,118},{81,36}}</string>
-			<key>offset</key>
-			<string>{0,0}</string>
-			<key>rotated</key>
-			<false/>
-			<key>sourceColorRect</key>
-			<string>{{0,0},{81,36}}</string>
-			<key>sourceSize</key>
-			<string>{81,36}</string>
-		</dict>
-		<key>Button_Tap_Right.png</key>
-		<dict>
-			<key>frame</key>
-			<string>{{226,118},{81,36}}</string>
-			<key>offset</key>
-			<string>{0,0}</string>
-			<key>rotated</key>
-			<false/>
-			<key>sourceColorRect</key>
-			<string>{{0,0},{81,36}}</string>
-			<key>sourceSize</key>
-			<string>{81,36}</string>
-		</dict>
-		<key>Finger.png</key>
-		<dict>
-			<key>frame</key>
-			<string>{{309,118},{44,97}}</string>
-			<key>offset</key>
-			<string>{0,0}</string>
-			<key>rotated</key>
-			<false/>
-			<key>sourceColorRect</key>
-			<string>{{0,0},{44,97}}</string>
-			<key>sourceSize</key>
-			<string>{44,97}</string>
-		</dict>
-		<key>Game_Over.png</key>
-		<dict>
-			<key>frame</key>
-			<string>{{355,118},{491,53}}</string>
-			<key>offset</key>
-			<string>{0,0}</string>
-			<key>rotated</key>
-			<false/>
-			<key>sourceColorRect</key>
-			<string>{{0,0},{491,53}}</string>
-			<key>sourceSize</key>
-			<string>{491,53}</string>
-		</dict>
-		<key>Get_Ready.png</key>
-		<dict>
-			<key>frame</key>
-			<string>{{2,217},{532,53}}</string>
-			<key>offset</key>
-			<string>{0,0}</string>
-			<key>rotated</key>
-			<false/>
-			<key>sourceColorRect</key>
-			<string>{{0,0},{532,53}}</string>
-			<key>sourceSize</key>
-			<string>{532,53}</string>
-		</dict>
-		<key>Score_Background.png</key>
-		<dict>
-			<key>frame</key>
-			<string>{{536,217},{350,191}}</string>
-			<key>offset</key>
-			<string>{0,0}</string>
-			<key>rotated</key>
-			<false/>
-			<key>sourceColorRect</key>
-			<string>{{0,0},{350,191}}</string>
-			<key>sourceSize</key>
-			<string>{350,191}</string>
-		</dict>
-		<key>Title.png</key>
-		<dict>
-			<key>frame</key>
-			<string>{{2,410},{491,53}}</string>
-			<key>offset</key>
-			<string>{0,0}</string>
-			<key>rotated</key>
-			<false/>
-			<key>sourceColorRect</key>
-			<string>{{0,0},{491,53}}</string>
-			<key>sourceSize</key>
-			<string>{491,53}</string>
-		</dict>
-		<key>Up_Arrow.png</key>
-		<dict>
-			<key>frame</key>
-			<string>{{495,410},{28,32}}</string>
-			<key>offset</key>
-			<string>{0,0}</string>
-			<key>rotated</key>
-			<false/>
-			<key>sourceColorRect</key>
-			<string>{{0,0},{28,32}}</string>
-			<key>sourceSize</key>
-			<string>{28,32}</string>
-		</dict>
-	</dict>
-	<key>metadata</key>
-	<dict>
-		<key>format</key>
-		<integer>2</integer>
-		<key>realTextureFileName</key>
-		<string>HUD@2x.png</string>
-		<key>size</key>
-		<string>{1024,512}</string>
-		<key>smartupdate</key>
-		<string>$TexturePacker:SmartUpdate:15f8a8db7641616dd48af96a6cc3d5fa:5d754b0dd8b442e05373417a6a253423:222dffc7200ef8c17495695a87596627$</string>
-		<key>textureFileName</key>
-		<string>HUD@2x.png</string>
-	</dict>
-</dict>
+    <dict>
+        <key>frames</key>
+        <dict>
+            <key>Button_Leader_Board.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{2,2},{200,114}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{200,114}}</string>
+                <key>sourceSize</key>
+                <string>{200,114}</string>
+            </dict>
+            <key>Button_Play.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{204,2},{200,114}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{200,114}}</string>
+                <key>sourceSize</key>
+                <string>{200,114}</string>
+            </dict>
+            <key>Button_Rate.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{406,2},{139,82}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{139,82}}</string>
+                <key>sourceSize</key>
+                <string>{139,82}</string>
+            </dict>
+            <key>Button_Tap_Left.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{547,2},{81,36}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{81,36}}</string>
+                <key>sourceSize</key>
+                <string>{81,36}</string>
+            </dict>
+            <key>Button_Tap_Right.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{630,2},{81,36}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{81,36}}</string>
+                <key>sourceSize</key>
+                <string>{81,36}</string>
+            </dict>
+            <key>Finger.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{713,2},{44,97}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{44,97}}</string>
+                <key>sourceSize</key>
+                <string>{44,97}</string>
+            </dict>
+            <key>Game_Over.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{2,118},{491,53}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{491,53}}</string>
+                <key>sourceSize</key>
+                <string>{491,53}</string>
+            </dict>
+            <key>Get_Ready.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{2,173},{532,53}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{532,53}}</string>
+                <key>sourceSize</key>
+                <string>{532,53}</string>
+            </dict>
+            <key>Score_Background.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{536,173},{350,191}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{350,191}}</string>
+                <key>sourceSize</key>
+                <string>{350,191}</string>
+            </dict>
+            <key>Title.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{2,366},{491,53}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{491,53}}</string>
+                <key>sourceSize</key>
+                <string>{491,53}</string>
+            </dict>
+            <key>Up_Arrow.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{495,366},{28,32}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{28,32}}</string>
+                <key>sourceSize</key>
+                <string>{28,32}</string>
+            </dict>
+        </dict>
+        <key>metadata</key>
+        <dict>
+            <key>format</key>
+            <integer>2</integer>
+            <key>realTextureFileName</key>
+            <string>HUD@2x.png</string>
+            <key>size</key>
+            <string>{1024,512}</string>
+            <key>smartupdate</key>
+            <string>$TexturePacker:SmartUpdate:b5a1a3461bd4496fac397751d17ce45a:5f866f2e1c0b5dc459c086b46459dc69:222dffc7200ef8c17495695a87596627$</string>
+            <key>textureFileName</key>
+            <string>HUD@2x.png</string>
+        </dict>
+    </dict>
 </plist>
