--- a/Resources/Info.plist
+++ b/Resources/Info.plist
@@ -34,6 +34,8 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
+	<key>LBAppID</key>
+	<integer>833047305</integer>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIPrerenderedIcon</key>
