--- a/Resources/Info.plist
+++ b/Resources/Info.plist
@@ -32,8 +32,21 @@
 	<string>APPL</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb682965105082449</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
+	<key>FacebookAppID</key>
+	<string>682965105082449</string>
+	<key>FacebookDisplayName</key>
+	<string>WonkyBird</string>
 	<key>LBAppID</key>
 	<integer>833047305</integer>
 	<key>LSRequiresIPhoneOS</key>
